--- a/style.css
+++ b/style.css
@@ -38,6 +38,8 @@ a, btn{
   font-size: 3rem;
   font-weight: 600;
 }
+
+
 section{
   height:auto;
   width: 100vw;
@@ -171,7 +173,7 @@ section{
 .hero-section{
   height: 100vh;
   width: 100vw;
-  background-image: url("images/gradient_wave_in_monochrome_colours_0901.jpg");
+  background-image: url("images/background.jpg");
   background-repeat: no-repeat;
   background-position: left;
   background-size: cover;
@@ -281,7 +283,8 @@ article {
   padding:20px 10px;
   text-transform: capitalize;
   border-radius:15px;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;  
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; 
+  /* transform: translateX(-1000%); */
   & div{
     text-align: left;
   }
@@ -321,7 +324,7 @@ article:hover{
   align-items: center;
   border: 1px solid gray;
   margin-bottom: 1rem;
-  transition: all .3s ease-in;
+  transition: all 300ms ease;
 }
 .box .img-box{
 
@@ -357,6 +360,8 @@ article:hover{
   background-repeat: no repeat;
   background-size: cover;
   background-position: left;
+  position: relative;
+
   /* backdrop-filter: brightness(30%);
   color:white !important; */
 }
@@ -422,10 +427,14 @@ article:hover{
     color:white;
     border-radius: 50%;
     background-color: #000;
-
+    transition: all .2s ease-out;
   }
 
 }
+.social-icons i:hover{
+  scale:1.3;
+}
+
 .tooltip{
   position: relative;
   display: inline-block;
@@ -459,6 +468,9 @@ article:hover{
   scale: 1;
 }
 
+
+
+
  
 /*
 =================================================
@@ -475,3 +487,26 @@ article:hover{
   padding-block:15px;
   border-top: 1px solid gray;
  }
+
+ .navigation-btn{
+  position: absolute;
+  bottom: 10%;
+  left:85%;
+  z-index: 100;
+  padding:10px 15px;
+  border: 1px solid black;
+  border-radius: 50%;
+  animation:beat 1s infinite alternate-reverse ease-in-out;
+  /* color:red;
+  background-color: blue; */
+}
+@keyframes beat {
+  0%{
+    scale:.9;
+    
+  }
+  100%{
+    scale:1.3;
+   
+  }
+}
